--- a/comedor-app/pom.xml
+++ b/comedor-app/pom.xml
@@ -65,6 +65,12 @@
 			<artifactId>itextpdf</artifactId>
 			<version>5.5.13.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.7.3</version>
+		</dependency>
+
 
 		<!-- Dependencias para Excel (Apache POI) -->
 		<dependency>
