--- a/comedor-app/src/main/resources/application.properties
+++ b/comedor-app/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # Configuración de la base de datos MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/comedor_db
-spring.datasource.username=root
-spring.datasource.password=311015
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://dpg-d0jp0c24d50c73fi85c0-a:5432/comedor_app
+spring.datasource.username=comedor_app_user
+spring.datasource.password=EswlonnVdzmh9AoMTEbYBii6kngjrMLF
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configuración de JPA e Hibernate
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.security.enabled=false
@@ -23,7 +23,7 @@ spring.servlet.multipart.max-request-size=5MB
 spring.web.resources.static-locations=classpath:/static/
 
 # Para evitar problemas con CORS en desarrollo
-spring.mvc.cors.allowed-origins=http://localhost:3000
+spring.mvc.cors.allowed-origins=https://github.com/lizeth311015/comedor_app_frontend
 spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE
 
 
