Configura puerto dinámico para Render

--- a/comedor-app/src/main/resources/application.properties
+++ b/comedor-app/src/main/resources/application.properties
@@ -26,4 +26,5 @@ spring.web.resources.static-locations=classpath:/static/
 spring.mvc.cors.allowed-origins=https://github.com/lizeth311015/comedor_app_frontend
 spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE
 
+server.port=${PORT:8080}
 
